automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "greenville_population = None # change None\n",
+    "greenville_population = g # change None\n",
     "greenville_population # 84554"
    ]
   },
@@ -103,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "area = greenville[\"Ar\"]\n",
+    "area = greenville[\"Area\"]\n",
     "area # 68"
    ]
   },
