--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
    },
    "outputs": [],
    "source": [
-    "los_cabos_pop = cit\n",
+    "los_cabos_pop = cities[3][\"Population\"]\n",
     "los_cabos_pop # 287651"
    ]
   },
