--- a/index.ipynb
+++ b/index.ipynb
@@ -366,7 +366,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = cities[11].value None\n",
+    "pyeongchang_values = cities[11].values() None\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
