automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
     }
    ],
    "source": [
-    "pyeongchang_keys = None\n",
+    "pyeongchang_keys = cities[11].keys()\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
